Rename DeviceId to IntegrationDeviceId to prevent confusion with the Device entity and its Id
