# src/AutoHome.Server/Endpoints/Devices/Get.GetDeviceResult.cs
@@ -3,7 +3,7 @@
 public class GetDeviceResult
 {
     public Guid Id { get; set; }
-    public Guid DeviceId { get; set; }
+    public Guid IntegrationDeviceId { get; set; }
     public string Type { get; set; } = null!;
     public string Name { get; set; } = null!;
     public string Uri { get; set; } = null!;
